--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
     <title>Relay Controler</title>
   </head>
   <body>
+
+
+<div class="all-block">
+
 <div class="container">
   
   <div class="header-relay pt-5">
@@ -36,32 +40,70 @@
 
   </div>
   
-</div>
 
-  <div class="container">
+
+ 
   <div class="element-block">
     <div class="element element-1">
       <div class="slider-frame rounded-circle">
         <span id="relay-panel" class="relay-button relay-items off"></span>
       </div>
     </div>
+
     <div class="element element-2">
       <div class="slider-frame rounded-circle">
         <span id="relay-panel" class="relay-button relay-items-1 off"></span>
       </div>
     </div>
-    <div class="element element-3"></div>
-    <div class="element element-4"></div>
-    <div class="element element-4"></div>
-    <div class="element element-4"></div>
-    <div class="element element-4"></div>
-    <div class="element element-4"></div>
+    <div class="element element-2">
+      <div class="slider-frame rounded-circle">
+
+      </div>
+    </div>
+    <div class="element element-2">
+      <div class="slider-frame rounded-circle">
+
+      </div>
+    </div>
+ <div class="element element-2">
+      <div class="slider-frame rounded-circle">
+
+      </div>
+    </div>
+ <div class="element element-2">
+      <div class="slider-frame rounded-circle">
+
+      </div>
+    </div>
+ <div class="element element-2">
+      <div class="slider-frame rounded-circle">
+
+      </div>
+    </div>
+ <div class="element element-2">
+      <div class="slider-frame rounded-circle">
+
+      </div>
+    </div>
+
+
+
+
+
+
+
+
   </div>
+
+
+
+
+
 </div>
 
 
 
-
+</div>
  
 
 
